# MKC

./: .editorconfig  .gitignore  .markdown-link-check.json  .markdownlint.json  LICENSE  README.md  full_chain_test.py
ai-service/: .dockerignore  Dockerfile  Makefile  README.md  celeryconfig.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
ai-service/app/: __init__.py  extensions.py  main.py
ai-service/app/agent/: __init__.py  checkpointer.py  graph.py  router.py  runner.py  state.py
ai-service/app/api/: agent.py  asr.py  chunking.py  dependencies.py  embedding.py  extraction.py  health.py  hybrid_retrieval.py  internal.py  llm.py  pdf.py  qa.py  retrieval.py  summary.py  vectors.py  web_search.py
ai-service/app/clients/: __init__.py  llm_client.py
ai-service/app/core/: config.py  exceptions.py  logger.py  response.py
ai-service/app/middleware/: logging.py  request_id.py
ai-service/app/models/: __init__.py  agent.py  asr.py  chunk.py  citation.py  embedding.py  extraction.py  hybrid_retrieval.py  pdf.py  qa.py  retrieval.py  summary.py  vector_record.py  web_search.py
ai-service/celery_workers/: celery_app.py
ai-service/config/: .env.example  ai.yaml  settings.yaml
ai-service/eval/: __init__.py  answer_providers.py  metrics.py  models.py  pipeline.py  report.py  types.py  validate_dataset.py
ai-service/k8s/: deployment.yaml  service.yaml
ai-service/prompts/: rag.txt  rag_citation.txt
ai-service/tests/: conftest.py  test_celery.py  test_config.py  test_health.py  test_internal_auth.py  test_main.py  test_response.py
(+845 files in other folders)
